chromeos: Laser tool blocks events from propagating.

After discussion concluded the best way was to delegate the laser pointer out of ash/common. Moved all the laser related files into ash/laser.

LaserPointerController.* replaces LaserPointerMode.* and it inherits from EventHandler to grab the events and propagate them to LaserPointerView/LaserPointerPoints, which remain the same. LaserPointerMode just inherits common palette tool and calls the delegate.

BUG=644804
TEST=ash_unittests --gtest_filter="LaserPointer*"

https://screenshot.googleplex.com/BtwX1GTCpcW

Review-Url: https://codereview.chromium.org/2311393004
Cr-Commit-Position: refs/heads/master@{#419400}
(cherry picked from commit 203ae0296e08db2452a4558d3e84dcf713f6badf)

Review URL: https://codereview.chromium.org/2361563002 .

Cr-Commit-Position: refs/branch-heads/2840@{#472}
Cr-Branched-From: 1ae106dbab4bddd85132d5b75c670794311f4c57-refs/heads/master@{#414607}