ash/common/wm_shell.h
@@ -350,6 +350,9 @@ class ASH_EXPORT WmShell {
 
   // TODO(jamescook): Remove this when VirtualKeyboardController has been moved.
   virtual void ToggleIgnoreExternalKeyboard() = 0;
+
+  // Enable or disable the laser pointer.
+  virtual void SetLaserPointerEnabled(bool enabled) = 0;
 #endif
 
  protected:
